server/Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  creationTimestamp: '2020-05-13T06:05:11Z'
  generation: 1
  name: istio-ingressgateway-grpc
  namespace: test-project
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: grpc
        number: 80
        protocol: GRPC
